[package]
name = "beruang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = { version = "0.23.1", features = ["dates"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.12", features = ["derive"] }
csv = "1.2.2"
dotenvy = "0.15.7"
itertools = "0.12.0"
polars = { version = "0.36.2", features = ["rows", "dtype-decimal", "lazy", "dynamic_group_by", "parquet"] }
serde = { version = "1.0.171", features = ["derive"] }
